templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: airflow
spec:
  parentRefs:
  - name: kong
    namespace: kong
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /airflow/api
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
      - name: airflow-api-server
        port: 8080
